route blocker + admin donation table

--- a/apps/client/public/locales/en/translation.json
+++ b/apps/client/public/locales/en/translation.json
@@ -116,5 +116,11 @@
   "tooltip": {
     "copy": "Copy current link",
     "clearFilters": "Clear filters"
+  },
+  "leaving": {
+    "title": "Before you leave",
+    "confirmq": "You will lose all data. Are you sure ?",
+    "cancel": "No",
+    "submit": "Yes"
   }
 }
