improvement: ci build

--- a/apps/client/public/locales/en/translation.json
+++ b/apps/client/public/locales/en/translation.json
@@ -39,6 +39,9 @@
       "comment": {
         "title": "Manage Comments",
         "evaluate": "Evaluate comments"
+      },
+      "dialog": {
+        "description": "Comment required when denying"
       }
     }
   },
@@ -86,7 +89,11 @@
     "user": "User",
     "comments": "Comments",
     "comment": "Comment",
-    "post": "Post"
+    "post": "Post",
+    "request": {
+      "description": "You can leave a comment to the donation owner",
+      "requestDonation": "Request Donation"
+    }
   },
   "addDonation": {
     "addLocation": "Add location",
