feature: request and approve requests

--- a/apps/client/public/locales/ro/translation.json
+++ b/apps/client/public/locales/ro/translation.json
@@ -127,5 +127,15 @@
   "tooltip": {
     "copy": "Copieaza link-ul",
     "clearFilters": "Sterge filtrele"
+  },
+  "leaving": {
+    "title": "Inainte sa pleci",
+    "confirmq": "O sa pierzi datele. Esti sigur ?",
+    "cancel": "Nu",
+    "submit": "Da"
+  },
+  "dialogRequest": {
+    "title": "Raspunde cererii",
+    "confirm": "Esti sigur ?"
   }
 }
