--- a/apps/client/public/locales/en/translation.json
+++ b/apps/client/public/locales/en/translation.json
@@ -129,5 +129,9 @@
     "confirmq": "You will lose all data. Are you sure ?",
     "cancel": "No",
     "submit": "Yes"
+  },
+  "dialogRequest": {
+    "title": "Responde to request",
+    "confirm": "Are you sure ?"
   }
 }
