correct way for push notifications + completed translations

--- a/apps/client/public/locales/en/translation.json
+++ b/apps/client/public/locales/en/translation.json
@@ -17,6 +17,10 @@
     "deny": "Deny",
     "error": "Failed to create",
     "smtWrong": "Something went wrong",
+    "edit": "Edit",
+    "evaluate": "Verify",
+    "previous": "Inapoi",
+    "next": "Inainte",
     "validations": {
       "comments": "Empty comments are not allowed",
       "required": "Required",
@@ -133,5 +137,15 @@
   "dialogRequest": {
     "title": "Responde to request",
     "confirm": "Are you sure ?"
+  },
+  "editDialog": {
+    "title": "Edit donation",
+    "description": "We recomend editing only the fields mentioned by the reviewer"
+  },
+  "tabs": {
+    "userDonations": "Donatiile mele",
+    "donationRequests": "Cereri la donatiile mele",
+    "myRequests": "Cererile mele",
+    "underDelivery": "In livrare"
   }
 }
