localization for notification message

--- a/apps/client/public/locales/en/translation.json
+++ b/apps/client/public/locales/en/translation.json
@@ -147,5 +147,10 @@
     "donationRequests": "Cereri la donatiile mele",
     "myRequests": "Cererile mele",
     "underDelivery": "In livrare"
+  },
+  "subscription": {
+    "message": "Receive notifications for all activities for your donations. You can activate notification later in your settings",
+    "dontAsk": "Don't ask again",
+    "subscribe": "Subscribe"
   }
 }
